// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/filters/FilterSection.tsx should be able to toggle filter value - none already set 1`] = `
<div
  class="css-bsfd3j"
>
  <label
    class="css-k8x29e"
  >
    <input
      aria-label="mention"
      class="css-f3myyk"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <svg
      class="css-1dr55qw"
      role="presentation"
      style="fill: var(--checkbox-tick-color);"
      viewBox="0 0 24 24"
    >
      <g
        fill-rule="evenodd"
      >
        <rect
          fill="currentColor"
          height="12"
          rx="2"
          width="12"
          x="6"
          y="6"
        />
      </g>
    </svg>
    <span
      class="css-1odt9zb"
    >
      Mention
    </span>
  </label>
  <span
    class="css-144dypm"
  >
    <span
      aria-hidden="true"
      class="css-1dbakxj"
      style="color: currentColor;"
    >
      <svg
        class="css-u7v0tx"
        fill="none"
        role="presentation"
        viewBox="-4 -4 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M8 1.5a6.5 6.5 0 1 0 3.25 12.13l.75 1.3A8 8 0 1 1 16 8c0 .842-.28 1.775-.817 2.513-.547.751-1.401 1.344-2.522 1.344-.577 0-1.07-.177-1.462-.507a2.5 2.5 0 0 1-.66-.908C9.387 11.776 7.529 12.346 6 11.464 4.229 10.441 3.926 8.057 4.969 6.25S8.229 3.513 10 4.536c1.12.647 1.66 1.87 1.633 3.105l-.005.13c0 .687.038 1.397.226 1.923.091.255.201.415.313.51.098.083.242.153.494.153.536 0 .976-.27 1.31-.727.342-.47.529-1.091.529-1.63A6.5 6.5 0 0 0 8 1.5m2.133 6.102c.015-.798-.328-1.447-.883-1.767C8.39 5.339 7.02 5.698 6.268 7s-.377 2.67.482 3.165c.86.496 2.23.137 2.982-1.165.244-.422.37-.866.397-1.287z"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>
  <span
    class="css-1wkl091"
  >
    <span
      class="css-f9etm4"
    >
      0
    </span>
  </span>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx should be able to toggle filter value - some filters already set 1`] = `
<div
  class="css-bsfd3j"
>
  <label
    class="css-k8x29e"
  >
    <input
      aria-label="comment"
      class="css-f3myyk"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <svg
      class="css-1dr55qw"
      role="presentation"
      style="fill: var(--checkbox-tick-color);"
      viewBox="0 0 24 24"
    >
      <g
        fill-rule="evenodd"
      >
        <rect
          fill="currentColor"
          height="12"
          rx="2"
          width="12"
          x="6"
          y="6"
        />
      </g>
    </svg>
    <span
      class="css-1odt9zb"
    >
      Comment
    </span>
  </label>
  <span
    class="css-144dypm"
  >
    <span
      aria-hidden="true"
      class="css-1dbakxj"
      style="color: currentColor;"
    >
      <svg
        class="css-u7v0tx"
        fill="none"
        role="presentation"
        viewBox="-4 -4 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M0 3.125A2.625 2.625 0 0 1 2.625.5h10.75A2.625 2.625 0 0 1 16 3.125v8.25A2.625 2.625 0 0 1 13.375 14H4.449l-3.327 1.901A.75.75 0 0 1 0 15.25zM2.625 2C2.004 2 1.5 2.504 1.5 3.125v10.833L4.05 12.5h9.325c.621 0 1.125-.504 1.125-1.125v-8.25C14.5 2.504 13.996 2 13.375 2zM12 6.5H4V5h8zm-3 3H4V8h5z"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>
  <span
    class="css-1wkl091"
  >
    <span
      class="css-f9etm4"
    >
      0
    </span>
  </span>
</div>
`;

exports[`renderer/components/filters/FilterSection.tsx should render itself & its children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-11u50rl"
      >
        <h4
          class="css-1skdotg"
        >
          FilterSectionTitle
        </h4>
        <div
          class="css-k5cxwk"
        >
          <div
            class="css-bsfd3j"
          >
            <label
              class="css-k8x29e"
            >
              <input
                aria-label="mention"
                class="css-f3myyk"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <svg
                class="css-1dr55qw"
                role="presentation"
                style="fill: var(--checkbox-tick-color);"
                viewBox="0 0 24 24"
              >
                <g
                  fill-rule="evenodd"
                >
                  <rect
                    fill="currentColor"
                    height="12"
                    rx="2"
                    width="12"
                    x="6"
                    y="6"
                  />
                </g>
              </svg>
              <span
                class="css-1odt9zb"
              >
                Mention
              </span>
            </label>
            <span
              class="css-144dypm"
            >
              <span
                aria-hidden="true"
                class="css-1dbakxj"
                style="color: currentColor;"
              >
                <svg
                  class="css-u7v0tx"
                  fill="none"
                  role="presentation"
                  viewBox="-4 -4 24 24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8 1.5a6.5 6.5 0 1 0 3.25 12.13l.75 1.3A8 8 0 1 1 16 8c0 .842-.28 1.775-.817 2.513-.547.751-1.401 1.344-2.522 1.344-.577 0-1.07-.177-1.462-.507a2.5 2.5 0 0 1-.66-.908C9.387 11.776 7.529 12.346 6 11.464 4.229 10.441 3.926 8.057 4.969 6.25S8.229 3.513 10 4.536c1.12.647 1.66 1.87 1.633 3.105l-.005.13c0 .687.038 1.397.226 1.923.091.255.201.415.313.51.098.083.242.153.494.153.536 0 .976-.27 1.31-.727.342-.47.529-1.091.529-1.63A6.5 6.5 0 0 0 8 1.5m2.133 6.102c.015-.798-.328-1.447-.883-1.767C8.39 5.339 7.02 5.698 6.268 7s-.377 2.67.482 3.165c.86.496 2.23.137 2.982-1.165.244-.422.37-.866.397-1.287z"
                    fill="currentcolor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1wkl091"
            >
              <span
                class="css-f9etm4"
              >
                0
              </span>
            </span>
          </div>
          <div
            class="css-bsfd3j"
          >
            <label
              class="css-k8x29e"
            >
              <input
                aria-label="comment"
                class="css-f3myyk"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <svg
                class="css-1dr55qw"
                role="presentation"
                style="fill: var(--checkbox-tick-color);"
                viewBox="0 0 24 24"
              >
                <g
                  fill-rule="evenodd"
                >
                  <rect
                    fill="currentColor"
                    height="12"
                    rx="2"
                    width="12"
                    x="6"
                    y="6"
                  />
                </g>
              </svg>
              <span
                class="css-1odt9zb"
              >
                Comment
              </span>
            </label>
            <span
              class="css-144dypm"
            >
              <span
                aria-hidden="true"
                class="css-1dbakxj"
                style="color: currentColor;"
              >
                <svg
                  class="css-u7v0tx"
                  fill="none"
                  role="presentation"
                  viewBox="-4 -4 24 24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 3.125A2.625 2.625 0 0 1 2.625.5h10.75A2.625 2.625 0 0 1 16 3.125v8.25A2.625 2.625 0 0 1 13.375 14H4.449l-3.327 1.901A.75.75 0 0 1 0 15.25zM2.625 2C2.004 2 1.5 2.504 1.5 3.125v10.833L4.05 12.5h9.325c.621 0 1.125-.504 1.125-1.125v-8.25C14.5 2.504 13.996 2 13.375 2zM12 6.5H4V5h8zm-3 3H4V8h5z"
                    fill="currentcolor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <span
              class="css-1wkl091"
            >
              <span
                class="css-f9etm4"
              >
                0
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-11u50rl"
    >
      <h4
        class="css-1skdotg"
      >
        FilterSectionTitle
      </h4>
      <div
        class="css-k5cxwk"
      >
        <div
          class="css-bsfd3j"
        >
          <label
            class="css-k8x29e"
          >
            <input
              aria-label="mention"
              class="css-f3myyk"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <svg
              class="css-1dr55qw"
              role="presentation"
              style="fill: var(--checkbox-tick-color);"
              viewBox="0 0 24 24"
            >
              <g
                fill-rule="evenodd"
              >
                <rect
                  fill="currentColor"
                  height="12"
                  rx="2"
                  width="12"
                  x="6"
                  y="6"
                />
              </g>
            </svg>
            <span
              class="css-1odt9zb"
            >
              Mention
            </span>
          </label>
          <span
            class="css-144dypm"
          >
            <span
              aria-hidden="true"
              class="css-1dbakxj"
              style="color: currentColor;"
            >
              <svg
                class="css-u7v0tx"
                fill="none"
                role="presentation"
                viewBox="-4 -4 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M8 1.5a6.5 6.5 0 1 0 3.25 12.13l.75 1.3A8 8 0 1 1 16 8c0 .842-.28 1.775-.817 2.513-.547.751-1.401 1.344-2.522 1.344-.577 0-1.07-.177-1.462-.507a2.5 2.5 0 0 1-.66-.908C9.387 11.776 7.529 12.346 6 11.464 4.229 10.441 3.926 8.057 4.969 6.25S8.229 3.513 10 4.536c1.12.647 1.66 1.87 1.633 3.105l-.005.13c0 .687.038 1.397.226 1.923.091.255.201.415.313.51.098.083.242.153.494.153.536 0 .976-.27 1.31-.727.342-.47.529-1.091.529-1.63A6.5 6.5 0 0 0 8 1.5m2.133 6.102c.015-.798-.328-1.447-.883-1.767C8.39 5.339 7.02 5.698 6.268 7s-.377 2.67.482 3.165c.86.496 2.23.137 2.982-1.165.244-.422.37-.866.397-1.287z"
                  fill="currentcolor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <span
            class="css-1wkl091"
          >
            <span
              class="css-f9etm4"
            >
              0
            </span>
          </span>
        </div>
        <div
          class="css-bsfd3j"
        >
          <label
            class="css-k8x29e"
          >
            <input
              aria-label="comment"
              class="css-f3myyk"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <svg
              class="css-1dr55qw"
              role="presentation"
              style="fill: var(--checkbox-tick-color);"
              viewBox="0 0 24 24"
            >
              <g
                fill-rule="evenodd"
              >
                <rect
                  fill="currentColor"
                  height="12"
                  rx="2"
                  width="12"
                  x="6"
                  y="6"
                />
              </g>
            </svg>
            <span
              class="css-1odt9zb"
            >
              Comment
            </span>
          </label>
          <span
            class="css-144dypm"
          >
            <span
              aria-hidden="true"
              class="css-1dbakxj"
              style="color: currentColor;"
            >
              <svg
                class="css-u7v0tx"
                fill="none"
                role="presentation"
                viewBox="-4 -4 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 3.125A2.625 2.625 0 0 1 2.625.5h10.75A2.625 2.625 0 0 1 16 3.125v8.25A2.625 2.625 0 0 1 13.375 14H4.449l-3.327 1.901A.75.75 0 0 1 0 15.25zM2.625 2C2.004 2 1.5 2.504 1.5 3.125v10.833L4.05 12.5h9.325c.621 0 1.125-.504 1.125-1.125v-8.25C14.5 2.504 13.996 2 13.375 2zM12 6.5H4V5h8zm-3 3H4V8h5z"
                  fill="currentcolor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
          <span
            class="css-1wkl091"
          >
            <span
              class="css-f9etm4"
            >
              0
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
